pxc/tests/test_01_px/constmet5.px

namespace constmet5;
import io;

struct foo {
	int x;
	function int n(int y) {
		int oldx = x;
		x = y;
		return oldx;
	}
}

cref{foo} v = cref(foo(10));
io::println(v->n(20)); // error

